--- a/index.html
+++ b/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
-
   <title>Pollinisation</title>
-
   <link rel="stylesheet" href="css/master.css">
 </head>
-
 <body>
 
+  <ul>
+    <li><a href="#home">Accueil</a></li>
+    <li class="dropdown">
+      <div class="dropdown-content">
+        <li><a href="lesetapes.html">Etape 1</a></li>
+        <li><a href="lesetapes.html">Etape 2</a></li>
+        <li><a href="lesetapes.html">Etape 3</a></li>
+      </div>
+      <li><a href="#Contact">Contact</a></li>
 
-
-  <nav>
-    <ul>
-      <li><a href="#">Qu'est ce que la pollinisation</a></li>
-      <li class="deroulant"><a href="lesetapes.html">Les étapes &ensp;</a>
-        <ul class="sous">
-          <li><a href="lesetapes.html">Etape 1</a></li>
-          <li><a href="lesetapes.html">Etape 2</a></li>
-          <li><a href="lesetapes.html">Etape 3</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+    </li>
+  </ul>
 
   <h2>Qu'est ce que la pollinisation ?</h2>
 
@@ -77,7 +70,7 @@
 
 
 
-  <div class="imageabeille"><img src="abeille.jpg"></div>
+  <div class="element10"><img src="abeille-3.jpg"></div>
 
 
   <video src="videoabeille.mp4" width=1000px height=1500 controls>
