--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <li><a href="#home">Accueil</a></li>
     <li class="dropdown">
       <div class="dropdown-content">
-        <li><a href="lesetapes.html">Etape 1</a></li>
-        <li><a href="lesetapes.html">Etape 2</a></li>
-        <li><a href="lesetapes.html">Etape 3</a></li>
+        <li><a href="etape1.html">Etape 1</a></li>
+        <li><a href="etape2.html">Etape 2</a></li>
+        <li><a href="etape3.html">Etape 3</a></li>
       </div>
       <li><a href="#Contact">Contact</a></li>
 
@@ -40,6 +40,8 @@
   </p>
 
 
+
+
   <p id="texte2">Et donc, comment sont pollinisées les plantes ?
     <strong>La pollinisation peut se faire sous plusieurs formes. </strong>Que ce soit par le biais d’animaux, d’insectes ou grâce au vent.
 
@@ -50,11 +52,13 @@
     de nectar et de pollen. Le pollen va ensuite rester accroché aux poils, plumes ou à la peau de l’animal. C’est en passant de fleur en fleur que les pollinisateurs vont disperser le pollen et ainsi permettre la fécondation de ces fleurs.
 
   </p>
+  <h2 id="element7"><span style="border: 4px solid #44AB96; border-radius: 10rem; padding: 0 1.5rem 0 1.5rem;">FLOWERS</span></h2>
 
 
 
-  <h1 id="element3"><span style="background: white;">80% des plantes à fleurs</span>dépendent directement des insectes pollinisateurs</h1>
-  <h2 id="element7"><span style="border: 2px solid black; border-radius: 10rem; padding: 0 1.5rem 0 1.5rem;">FLOWERS</span></h2>
+  <h1 id="element3"><span style="background: white;">80% des plantes à fleurs</span> dépendent directement des insectes pollinisateurs</h1>
+
+  <div class="element10"><img src="abeille-3.jpg"></div>
 
 
   <p id="texte4">Et donc, comment sont pollinisées les plantes ?
@@ -70,11 +74,25 @@
 
 
 
-  <div class="element10"><img src="abeille-3.jpg"></div>
+  <p id="texte7">Et donc, comment sont pollinisées les plantes ?
+    <strong>La pollinisation peut se faire sous plusieurs formes. </strong>Que ce soit par le biais d’animaux, d’insectes ou grâce au vent.
+
+    Quand les fleurs se servent du vent pour disperser le pollen, on parle de l’anémogamie. Ce type de pollinisation permet à la plante d’échanger sans être totalement dépendant des butineurs mais elle est beaucoup moins efficace, car les grains
+    s’envolent dans toutes les directions et seul une infime partie atteindra sa cible.
+
+    Mais la forme de pollinisation la plus commune passe par un animal pollinisateur, on parle alors de zoogamie. Dans ce cas, les pollinisateurs sont attirés par le nectar que produisent les plantes. En venant butiner, ces derniers vont se nourrir
+    de nectar et de pollen. Le pollen va ensuite rester accroché aux poils, plumes ou à la peau de l’animal. C’est en passant de fleur en fleur que les pollinisateurs vont disperser le pollen et ainsi permettre la fécondation de ces fleurs.
+
+  </p>
 
 
-  <video src="videoabeille.mp4" width=1000px height=1500 controls>
-  </video>
+
+
+
+
+
+    <video id="videoabeille" src="videoabeille.mp4" width=1000px height=700 controls>
+    </video>
 
   <a href="#" class="next-link">Haut de la page</a>
 
