--- a/index.html
+++ b/index.html
@@ -61,28 +61,20 @@
   <div class="element10"><img src="abeille-3.jpg"></div>
 
 
-  <p id="texte4">Et donc, comment sont pollinisées les plantes ?
-    <strong>La pollinisation peut se faire sous plusieurs formes. </strong>Que ce soit par le biais d’animaux, d’insectes ou grâce au vent.
+  <p id="texte4">Il existe une variété de pollinisateurs : des abeilles (sauvages et domestiques dans les ruchers), des papillons, des oiseaux, certains mammifères comme les petits rongeurs, et d’autres éléments de la nature comme l’eau, pour les plantes poussant dans les cours d’eau.
 
-    Quand les fleurs se servent du vent pour disperser le pollen, on parle de l’anémogamie. Ce type de pollinisation permet à la plante d’échanger sans être totalement dépendant des butineurs mais elle est beaucoup moins efficace, car les grains
-    s’envolent dans toutes les directions et seul une infime partie atteindra sa cible.
+Le vent participe à la pollinisation de10% des plantes. Celles-ci n’ont pas à façonner leur morphologies de manière particulière, néanmoins, elles fournissent beaucoup d’énergie pour produire le plus de pollen possible, parce que l’action du vent n’est pas toujours un moyen de transport optimal.
 
-    Mais la forme de pollinisation la plus commune passe par un animal pollinisateur, on parle alors de zoogamie. Dans ce cas, les pollinisateurs sont attirés par le nectar que produisent les plantes. En venant butiner, ces derniers vont se nourrir
-    de nectar et de pollen. Le pollen va ensuite rester accroché aux poils, plumes ou à la peau de l’animal. C’est en passant de fleur en fleur que les pollinisateurs vont disperser le pollen et ainsi permettre la fécondation de ces fleurs.
+Ces pollinisateurs sont plus ou moins spécialisés dans le type de plantes ou de fleurs à polliniser : ils ne récoltent pas tous le pollen des mêmes plantes. Comme nous venons de le voir, ces insectes sont nombreux.  Mais quel est le rôle d’un tel insecte ? Tout d’abord ils aident à préserver la biodiversité (notamment grâce à la pollinisation croisée des espèces dans les jardins ou les parcs sauvages par exemple).  Ils rendent donc un grand service à l’être humain, en permettant à la nature de se développer.  L’insecte pollinisateur participe également au rendement des cultures (aussi bien privées comme le potager que pour les éleveurs professionnels), ils sont donc très utiles et appréciés par les agriculteurs.  En effet, les ¾ des cultures mondiales dépendent des insectes pollinisateurs.
+
 
   </p>
 
 
 
-  <p id="texte7">Et donc, comment sont pollinisées les plantes ?
-    <strong>La pollinisation peut se faire sous plusieurs formes. </strong>Que ce soit par le biais d’animaux, d’insectes ou grâce au vent.
+  <p id="texte7">Malheureusement, le nombre des pollinisateurs régresse de plus en plus, notamment dans les pays industrialisés. Et pourtant on compte 45% de ruche en plus au niveau mondial, au cours des 50 dernières années. Mais trop de pesticides, des plantes riches en nectar qui se font de plus en plus rares, surtout en milieu urbain, et bien d’autres facteurs contribuent d’année en année au déclin des espèces de pollinisateurs
 
-    Quand les fleurs se servent du vent pour disperser le pollen, on parle de l’anémogamie. Ce type de pollinisation permet à la plante d’échanger sans être totalement dépendant des butineurs mais elle est beaucoup moins efficace, car les grains
-    s’envolent dans toutes les directions et seul une infime partie atteindra sa cible.
-
-    Mais la forme de pollinisation la plus commune passe par un animal pollinisateur, on parle alors de zoogamie. Dans ce cas, les pollinisateurs sont attirés par le nectar que produisent les plantes. En venant butiner, ces derniers vont se nourrir
-    de nectar et de pollen. Le pollen va ensuite rester accroché aux poils, plumes ou à la peau de l’animal. C’est en passant de fleur en fleur que les pollinisateurs vont disperser le pollen et ainsi permettre la fécondation de ces fleurs.
-
+Les conséquences : des ressources alimentaires de moins en moins variées, plus d’abeilles donc une plus grosse production de miel, un écosystème déséquilibré, …
   </p>
 
 
